<resources>
    <string name="app_name">Pablo Adventure Quest</string>
    <string name="intructions">Instructions</string>
    <string name="survival_mode">Survival Mode</string>
    <string name="survival_mode_text">Be a survival! Play until you get wrong. Use the arrow to skip a question</string>
    <string name="time_mode">Time Mode</string>
    <string name="time_mode_text">Feel the adrenaline! Play against the clock. You have 60 seconds to answer everything you can</string>
    <string name="standard_mode">Standard Mode</string>
    <string name="standard_mode_text">Newbie? Start learning about Pablo answering 20 questions we have selected for you</string>
    <string name="credits">Credits</string>
    <string name="settings">Settings</string>

    <string name="you_lost">You Lost</string>
    <string name="your_puntiation">Your puntuation is: </string>
    <string name="ok">OK</string>

    <string name="standard_number_questions">Quantity of question in Standard Mode</string>
    <string name="seconds_time">Seconds to play in Time Mode</string>
    <string name="save">Save</string>
    <string name="credits_text">
        Questions: Pastor Oskar Jairo Gonzalez\n\n
        App desing: Raquel Salcedo\n\n
        App programming: Mauricio Collazos\n\n
    </string>
</resources>
