<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.contraslash.android.pabloadventurequest.applications.game.activities.Settings">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:id="@+id/time_header"
        android:background="@color/secondary_purple">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@color/secondary_purple"
            android:src="@drawable/logo_mini"
            android:scaleType="fitCenter"
            android:padding="10dp"
            android:id="@+id/settings_home"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/settings"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="24sp"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/time_header"
        android:background="@color/brown"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/standard_number_questions"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="20"
                android:inputType="number"
                android:id="@+id/settings_number_questions"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/seconds_time"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="60"
                android:inputType="number"
                android:id="@+id/settings_seconds"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/secondary_purple"
            android:text="@string/save"
            android:textColor="@color/white"
            android:id="@+id/settings_save"/>

    </LinearLayout>
</RelativeLayout>
